make graph sorting 'more' readable update some champion background headers fix vert-bar alignment

--- a/lol/static/less/main.less
+++ b/lol/static/less/main.less
@@ -140,6 +140,10 @@ img.sprite {
 				float:right;
 			}
 		}
+		.vert-bar {
+			margin-left:-4px;
+			.box-shadow(0px 0px 2px);
+		}
 	}
 	.item {
 		text-align:left;
